# K-and-R-exercises-and-examples

./: .gitignore  CMakeLists.txt
01.01-hello_world/: 01-mem_layout.c  02-max_cpu.cpp  03-all_6_cores.cpp  04-thread_join.cpp  05-detached_thread_demo.cpp  ex-hello.c
