cmake_minimum_required(VERSION 3.25)
project(KR_Exercises C)
set(CMAKE_C_STANDARD 11)

add_executable(ex_01_01_hello_world_ex_hello_c 01.01-hello_world/ex-hello.c)
add_executable(ex_01_02_variables_ex_fahrenheit_c 01.02-variables/ex-fahrenheit.c)
add_executable(ex_01_02_variables_ex_final_fahrenheit_c 01.02-variables/ex-final-fahrenheit.c)
add_executable(ex_01_02_variables_ex_float_fahrenheit_c 01.02-variables/ex-float_fahrenheit.c)
add_executable(ex_01_03_for_statement_e_1_5_reverse_order_c 01.03-for_statement/e-1.5-reverse_order.c)
add_executable(ex_01_04_symbolic_constants_ex_fahrenheit_c 01.04-symbolic-constants/ex-fahrenheit.c)
add_executable(ex_01_05_1_file_copying_e_1_6_1_7_check_eof_c 01.05.1-file_copying/e-1.6-1.7-check_eof.c)
add_executable(ex_01_05_1_file_copying_ex_copy1_c 01.05.1-file_copying/ex-copy1.c)
add_executable(ex_01_05_1_file_copying_ex_copy2_c 01.05.1-file_copying/ex-copy2.c)
add_executable(ex_01_05_2_character_counting_ex_count1_c 01.05.2-character_counting/ex-count1.c)
add_executable(ex_01_05_2_character_counting_ex_count2_c 01.05.2-character_counting/ex-count2.c)
add_executable(ex_01_05_3_line_counting_e_1_08_count_all_c 01.05.3-line_counting/e-1.08-count_all.c)
add_executable(ex_01_05_3_line_counting_e_1_09_suppress_blanks_c 01.05.3-line_counting/e-1.09-suppress_blanks.c)
add_executable(ex_01_05_3_line_counting_e_1_10_replace_c 01.05.3-line_counting/e-1.10.replace.c)
add_executable(ex_01_05_3_line_counting_ex_count_lines_c 01.05.3-line_counting/ex-count_lines.c)
add_executable(ex_01_05_4_word_counting_e_1_12_word_per_line_c 01.05.4-word_counting/e-1.12-word_per_line.c)
add_executable(ex_01_05_4_word_counting_ex_count_c 01.05.4-word_counting/ex-count.c)
add_executable(ex_01_06_arrays_e_1_14_freq_histogram_c 01.06-arrays/e-1.14-freq_histogram.c)
add_executable(ex_01_06_arrays_e_1_13_length_histogram_c 01.06-arrays/e.1.13-length_histogram.c)
add_executable(ex_01_06_arrays_ex_counter_c 01.06-arrays/ex-counter.c)
add_executable(ex_01_07_functions_e_1_15_fahrenheit_c 01.07-functions/e-1.15-fahrenheit.c)
add_executable(ex_01_07_functions_ex_power_c 01.07-functions/ex-power.c)
add_executable(ex_01_09_character_arrays_e_1_17_longer_lines_c 01.09-character_arrays/e-1.17-longer_lines.c)
add_executable(ex_01_09_character_arrays_e_1_18_remove_blanks_c 01.09-character_arrays/e-1.18-remove_blanks.c)
add_executable(ex_01_09_character_arrays_e_1_19_reverse_c 01.09-character_arrays/e-1.19-reverse.c)
add_executable(ex_01_09_character_arrays_ex_longest_line_c 01.09-character_arrays/ex-longest_line.c)
add_executable(ex_01_10_external_variables_e_1_20_detab_c 01.10-external_variables/e-1.20-detab.c)
add_executable(ex_01_10_external_variables_e_1_21_entab_c 01.10-external_variables/e-1.21-entab.c)
add_executable(ex_01_10_external_variables_e_1_22_fold_c 01.10-external_variables/e-1.22-fold.c)
add_executable(ex_01_10_external_variables_e_1_23_remove_comments_c 01.10-external_variables/e-1.23-remove_comments.c)
add_executable(ex_01_10_external_variables_e_1_24_check_syntax_c 01.10-external_variables/e-1.24-check_syntax.c)
add_executable(ex_01_10_external_variables_ex_longest_line_c 01.10-external_variables/ex-longest_line.c)
add_executable(ex_02_02_data_types_and_sizes_e_2_1_ranges_c 02.02-data_types_and_sizes/e-2.1-ranges.c)
add_executable(ex_02_03_constants_ex_strlen_c 02.03-constants/ex-strlen.c)
add_executable(ex_02_06_relational_and_logical_operators_e_2_2_loop_c 02.06-relational_and_logical_operators/e-2.2-loop.c)
add_executable(ex_02_07_type_conversions_e_2_3_htoi_c 02.07-type_conversions/e-2.3-htoi.c)
add_executable(ex_02_07_type_conversions_ex_atoi_c 02.07-type_conversions/ex-atoi.c)
add_executable(ex_02_08_increment_and_decrement_operators_e_2_4_squeeze_c 02.08-increment_and_decrement_operators/e-2.4-squeeze.c)
add_executable(ex_02_08_increment_and_decrement_operators_e_2_5_strpbrk_c 02.08-increment_and_decrement_operators/e-2.5-strpbrk.c)
add_executable(ex_02_08_increment_and_decrement_operators_ex_squeeze_c 02.08-increment_and_decrement_operators/ex-squeeze.c)
add_executable(ex_02_09_bitwise_operators_e_2_6_setbits_c 02.09-bitwise_operators/e-2.6-setbits.c)
add_executable(ex_02_09_bitwise_operators_e_2_7_invert_c 02.09-bitwise_operators/e-2.7-invert.c)
add_executable(ex_02_09_bitwise_operators_e_2_8_rightrot_c 02.09-bitwise_operators/e-2.8-rightrot.c)
add_executable(ex_02_11_conditional_expressions_e_2_10_lower_c 02.11-conditional_expressions/e-2.10-lower.c)
add_executable(ex_03_03_else_if_e_3_1_binsearch_c 03.03-else_if/e-3.1-binsearch.c)
add_executable(ex_03_03_else_if_ex_binsearch_c 03.03-else_if/ex-binsearch.c)
add_executable(ex_03_04_switch_e_3_2_escape_c 03.04-switch/e-3.2-escape.c)
add_executable(ex_03_04_switch_ex_cout_c 03.04-switch/ex-cout.c)
add_executable(ex_03_05_loops_while_and_for_e_3_3_expand_c 03.05-loops_while_and_for/e-3.3-expand.c)
add_executable(ex_03_05_loops_while_and_for_ex_atoi_c 03.05-loops_while_and_for/ex-atoi.c)
add_executable(ex_03_05_loops_while_and_for_ex_shell_sort_c 03.05-loops_while_and_for/ex-shell_sort.c)
add_executable(ex_03_06_loops_do_while_e_3_4_itoa_c 03.06-loops_do_while/e-3.4-itoa.c)
add_executable(ex_03_06_loops_do_while_e_3_5_itob_c 03.06-loops_do_while/e-3.5-itob.c)
add_executable(ex_03_06_loops_do_while_e_3_6_itoa_c 03.06-loops_do_while/e-3.6-itoa.c)
add_executable(ex_03_06_loops_do_while_ex_itoa_c 03.06-loops_do_while/ex-itoa.c)
add_executable(ex_03_07_break_and_continue_ex_trim_c 03.07-break_and_continue/ex-trim.c)
add_executable(ex_04_01_basics_of_functions_e_4_1_strrindex_c 04.01-basics_of_functions/e-4.1-strrindex.c)
add_executable(ex_04_01_basics_of_functions_ex_find_lines_matching_c 04.01-basics_of_functions/ex-find_lines_matching.c)
add_executable(ex_04_02_functions_returning_non_integers_e_4_2_exteded_atof_c 04.02-functions_returning_non_integers/e-4.2-exteded_atof.c)
add_executable(ex_04_02_functions_returning_non_integers_ex_atof_c 04.02-functions_returning_non_integers/ex-atof.c)
add_executable(ex_04_02_functions_returning_non_integers_ex_primitive_calculator_c 04.02-functions_returning_non_integers/ex-primitive_calculator.c)
add_executable(ex_04_03_external_variables_e_4_10_use_getline_c 04.03-external_variables/e-4.10-use_getline.c)
add_executable(ex_04_03_external_variables_e_4_3_modulus_c 04.03-external_variables/e-4.3-modulus.c)
add_executable(ex_04_03_external_variables_e_4_4_e_4_6_more_commands_c 04.03-external_variables/e-4.4_e-4.6-more_commands.c)
add_executable(ex_04_03_external_variables_e_4_7_ungets_c 04.03-external_variables/e-4.7-ungets.c)
add_executable(ex_04_03_external_variables_e_4_8_modified_get_unget_ch_c 04.03-external_variables/e-4.8-modified_get_unget_ch.c)
add_executable(ex_04_03_external_variables_e_4_9_get_unget_ch_with_eof_c 04.03-external_variables/e-4.9-get_unget_ch_with_eof.c)
add_executable(ex_04_03_external_variables_ex_reverse_polish_calculator_c 04.03-external_variables/ex-reverse_polish_calculator.c)
add_executable(ex_04_06_static_variables_e_4_11_modified_getop_c 04.06-static_variables/e-4.11-modified_getop.c)
add_executable(ex_04_10_recursion_e_4_12_recursive_itoa_c 04.10-recursion/e-4.12-recursive_itoa.c)
add_executable(ex_04_10_recursion_e_4_13_recursive_reverse_c 04.10-recursion/e-4.13-recursive_reverse.c)
add_executable(ex_04_10_recursion_ex_printd_c 04.10-recursion/ex-printd.c)
add_executable(ex_04_10_recursion_ex_qsort_c 04.10-recursion/ex-qsort.c)
add_executable(ex_04_11_2_macro_substitution_e_4_14_swap_macro_c 04.11.2-macro_substitution/e-4.14-swap_macro.c)
add_executable(ex_05_02_pointers_and_function_arguments_e_5_1_push_back_c 05.02-pointers_and_function_arguments/e-5.1-push_back.c)
add_executable(ex_05_02_pointers_and_function_arguments_e_5_2_getfloat_c 05.02-pointers_and_function_arguments/e-5.2-getfloat.c)
add_executable(ex_05_02_pointers_and_function_arguments_ex_getint_c 05.02-pointers_and_function_arguments/ex-getint.c)
add_executable(ex_05_04_address_arithmetic_ex_alloc_c 05.04-address_arithmetic/ex-alloc.c)
add_executable(ex_05_05_character_pointers_and_functions_e_5_3_strcat_c 05.05-character_pointers_and_functions/e-5.3-strcat.c)
add_executable(ex_05_05_character_pointers_and_functions_e_5_4_strend_c 05.05-character_pointers_and_functions/e-5.4-strend.c)
add_executable(ex_05_05_character_pointers_and_functions_e_5_5_n_cpy_cat_cmp_c 05.05-character_pointers_and_functions/e-5.5-n_cpy_cat_cmp.c)
add_executable(ex_05_06_pointer_arrays_pointers_to_pointers_ex_sort_lines_c 05.06-pointer_arrays-pointers_to_pointers/ex-sort-lines.c)
add_executable(ex_05_07_multi_dimensional_arrays_e_5_8_error_check_c 05.07-multi_dimensional_arrays/e-5.8-error_check.c)
add_executable(ex_05_07_multi_dimensional_arrays_ex_day_of_the_year_c 05.07-multi_dimensional_arrays/ex-day_of_the_year.c)
add_executable(ex_05_09_pointers_vs_multi_dimensional_arrays_e_5_9_day_of_the_year_with_pointers_c 05.09-pointers_vs_multi_dimensional_arrays/e-5.9-day_of_the_year_with_pointers.c)
add_executable(ex_05_10_command_line_arguments_e_5_10_expr_c 05.10-command_line_arguments/e-5.10-expr.c)
add_executable(ex_05_10_command_line_arguments_e_5_11_detab_c 05.10-command_line_arguments/e-5.11-detab.c)
add_executable(ex_05_10_command_line_arguments_e_5_11_entab_c 05.10-command_line_arguments/e-5.11-entab.c)
add_executable(ex_05_10_command_line_arguments_e_5_12_extended_detab_c 05.10-command_line_arguments/e-5.12-extended_detab.c)
add_executable(ex_05_10_command_line_arguments_e_5_12_extended_entab_c 05.10-command_line_arguments/e-5.12-extended_entab.c)
add_executable(ex_05_10_command_line_arguments_e_5_13_tail_c 05.10-command_line_arguments/e-5.13-tail.c)
add_executable(ex_05_10_command_line_arguments_ex_echo_c 05.10-command_line_arguments/ex-echo.c)
add_executable(ex_05_10_command_line_arguments_ex_echo2_c 05.10-command_line_arguments/ex-echo2.c)
add_executable(ex_05_10_command_line_arguments_ex_find_c 05.10-command_line_arguments/ex-find.c)
add_executable(ex_05_10_command_line_arguments_ex_find2_c 05.10-command_line_arguments/ex-find2.c)
add_executable(ex_05_11_pointers_to_functions_e_5_14_reverse_sorting_c 05.11-pointers_to_functions/e-5.14-reverse_sorting.c)
add_executable(ex_05_11_pointers_to_functions_e_5_15_fold_upper_and_lower_c 05.11-pointers_to_functions/e-5.15-fold_upper_and_lower.c)
add_executable(ex_05_11_pointers_to_functions_e_5_16_directory_order_c 05.11-pointers_to_functions/e-5.16-directory_order.c)
add_executable(ex_05_11_pointers_to_functions_ex_qsort_c 05.11-pointers_to_functions/ex-qsort.c)
add_executable(ex_06_02_structures_and_functions_ex_structs_c 06.02-structures_and_functions/ex-structs.c)
add_executable(ex_06_03_arrays_of_structures_e_6_1_improved_getword_c 06.03-arrays_of_structures/e-6.1-improved_getword.c)
add_executable(ex_06_03_arrays_of_structures_ex_count_c 06.03-arrays_of_structures/ex-count.c)
add_executable(ex_06_04_pointers_to_structures_ex_count_c 06.04-pointers_to_structures/ex-count.c)
add_executable(ex_06_05_self_referential_structures_e_6_3_cross_c 06.05-self_referential_structures/e-6.3-cross.c)
add_executable(ex_06_05_self_referential_structures_e_6_4_print_c 06.05-self_referential_structures/e-6.4-print.c)
add_executable(ex_06_05_self_referential_structures_ex_general_counting_c 06.05-self_referential_structures/ex-general_counting.c)
add_executable(ex_06_06_table_lookup_e_6_6_define_c 06.06-table_lookup/e-6.6-define.c)
add_executable(ex_07_01_standard_input_and_output_e_7_1_converter_c 07.01-standard_input_and_output/e-7.1-converter.c)
add_executable(ex_07_02_formatted_output_printf_e_7_2_print_c 07.02-formatted-output_printf/e-7.2-print.c)
add_executable(ex_07_03_variable_length_argument_lists_e_7_3_revised_miniprintf_c 07.03-variable_length_argument_lists/e-7.3-revised_miniprintf.c)
add_executable(ex_07_03_variable_length_argument_lists_ex_miniprintf_c 07.03-variable_length_argument_lists/ex-miniprintf.c)
add_executable(ex_07_04_formatted_input_scan_e_7_4_mscanf_c 07.04-formatted_input_scan/e-7.4-mscanf.c)
add_executable(ex_07_04_formatted_input_scan_e_7_5_calculator_c 07.04-formatted_input_scan/e-7.5-calculator.c)
add_executable(ex_07_05_file_access_ex_cat_c 07.05-file_access/ex-cat.c)
add_executable(ex_07_06_handling_errors_ex_cat2_c 07.06-handling_errors/ex-cat2.c)
add_executable(ex_07_07_line_input_and_output_e_7_6_diff_c 07.07-line_input_and_output/e-7.6-diff.c)
add_executable(ex_07_07_line_input_and_output_e_7_7_modfified_pattern_c 07.07-line_input_and_output/e-7.7-modfified_pattern.c)
add_executable(ex_07_07_line_input_and_output_e_7_8_print_set_of_files_c 07.07-line_input_and_output/e-7.8-print_set_of_files.c)
add_executable(ex_08_02_low_level_io_read_and_write_ex_getchar_c 08.02-low_level_io_read_and_write/ex-getchar.c)
add_executable(ex_08_02_low_level_io_read_and_write_ex_input_to_output_c 08.02-low_level_io_read_and_write/ex-input_to_output.c)
add_executable(ex_08_03_open_create_close_unlink_e_8_1_cat_c 08.03-open_create_close_unlink/e-8.1-cat.c)
add_executable(ex_08_03_open_create_close_unlink_ex_cp_c 08.03-open_create_close_unlink/ex-cp.c)